<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/search_messages"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/search_messages_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/list_more_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="listMore"
            android:text="@string/default_list_more" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#777" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            android:padding="4dp" >

            <ImageView
                android:id="@+id/image_view1"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:contentDescription="@string/user_icon"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="2dp" >

                <TextView
                    android:id="@+id/user_text1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:clickable="true"
                    android:longClickable="true"
                    android:text="Message 1 goes here ...." />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="username"
                    android:textSize="12sp" >
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#777" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            android:padding="4dp" >

            <ImageView
                android:id="@+id/image_view2"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:contentDescription="@string/user_icon"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="2dp" >

                <TextView
                    android:id="@+id/user_text2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:clickable="true"
                    android:longClickable="true"
                    android:text="And message 2 goes here." />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="username"
                    android:textSize="12sp" >
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#777" />

        <Button
            android:id="@+id/view_messages_to_create_message_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="goToCreateMessage"
            android:text="@string/from_view_messages_to_create_message" />
    </LinearLayout>

</ScrollView>